<resources>
    <!--SharedPreferences File Variables-->
    <string name="preference_file_name">healthyhawk_app_preferences</string>
    <string name="preference_key_is_registered">bool_is_registered</string>
    <string name="preference_key_nickname">user_nickname</string>
    <string name="preference_key_age">user_age</string>
    <string name="preference_key_gender">user_gender</string>
    <string name="preference_key_height">user_height</string>
    <string name="preference_key_height_unit">user_height_unit</string>
    <string name="preference_key_weight">user_weight</string>
    <string name="preference_key_weight_unit">user_weight_unit</string>
    <string name="preference_key_weight_goal">user_weight_goal</string>

    <!-- Weight log Activity Values -->
    <string name="WeightChartTitle">Your Progress</string>
    <string name="CurrentWeightTitleText">Currently:</string>
    <string name="GoalWeightTitleText">Goal:</string>
    <string name="LogWeightButtonText">Log New Weight</string>
    <string name="SetGoalButtonText">Set New Goal</string>
    <string name="LogWeightDialogTitle">Log New Weight</string>
    <string name="LogGoalWeightDialogTitle">Set New Goal</string>
    <string name="LogWeightDialogSave">Save</string>
    <string name="LogWeightDialogCancel">Cancel</string>
    <string name="WeightLogEmptyMessage">Enter a weight to get started…</string>

    <!-- String Lists -->
    <string-array name="Genders">
        <item>Woman</item>
        <item>Man</item>
        <item>Non-binary/non-conforming</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="HeightUnits">
        <item>cm</item>
        <item>\"</item>
    </string-array>
    <string-array name="WeightUnits">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string-array name="AmPm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="Facilities">
        <item>Facility 1</item>
        <item>Facility 2</item>
        <item>Facility 3</item>
        <item>Facility 4</item>
    </string-array>
    <string-array name="exerciseType">
        <item>Walk</item>
        <item>Jog</item>
        <item>Run</item>
        <item>Cycle</item>
        <item>Swim</item>
        <item>Bench Press</item>
        <item>Chest Press</item>
        <item>Dumbbell Bicep Curls</item>
        <item>Hammer Curls</item>
        <item>Dips</item>
        <item>Rows</item>
        <item>Deadlifts</item>
        <item>Push-ups</item>
        <item>Chin-ups</item>
        <item>Pull-ups</item>
        <item>Side Plank Hold</item>
        <item>Plank Hold</item>
        <item>Squats</item>
        <item>Calf Raises</item>
        <item>Knee Raises</item>
        <item>Leg Raises</item>
        <item>Lunges</item>
    </string-array>
    <string-array name="exerciseStatName">
        <item>km</item>
        <item>miles</item>
        <item>lbs</item>
        <item>kgs</item>
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Calories</item>
        <item>Sets</item>
        <item>Reps</item>
    </string-array>

    <!-- Unsorted, All Other Strings -->
    <string name="app_name">HealthyHawk</string>
    <string name="LoginTitle">Login</string>
    <string name="ExerciseLogTitle">Exercise Log</string>
    <string name="BookFacilitiesTitle">Book Facilities</string>
    <string name="WeightLogTitle">Weight Log</string>
    <string name="DefaultLogin">StudentName@mylaurier.ca</string>
    <string name="PasswordTitle">Password</string>
    <string name="PasswordTitleReEnter">Confirm Password</string>
    <string name="ReturnToLogin">Return to Login</string>
    <string name="RegisterButton">Register</string>
    <string name="LoginButton">Login</string>
    <string name="Enter_Email">Email</string>
    <string name="ExerciseLogButton">Exercise Log</string>
    <string name="WeightLogButton">Weight Log</string>
    <string name="BookFacilitiesButton">Book Facilities</string>
    <string name="LoginToBook">Login To Book Facilities</string>
    <string name="LabelNickname">Name</string>
    <string name="HintNickname">Your Name</string>
    <string name="LabelAge">Age</string>
    <string name="HintAge">xx</string>
    <string name="LabelGender">Gender</string>
    <string name="HintGender">Man, Woman, Non-binary, Prefer not to say</string>
    <string name="LabelHeight">Height</string>
    <string name="HintHeight">xx</string>
    <string name="LabelHeightUnit">Unit</string>
    <string name="LabelWeight">Weight</string>
    <string name="HintWeight">xx</string>
    <string name="LabelWeightUnit">Unit</string>
    <string name="ButtonSave">Save</string>
    <string name="successful_registration">Your info has been saved!</string>
    <string name="commit_preferences_failed">Failed to save. Try again.</string>
    <string name="SetupProfileButton">Set Up My Profile</string>
    <string name="IntroTopMessageText">Take a moment to set up your personal profile</string>
    <string name="label_user_introduction">Profile Details</string>
    <string name="label_home_screen">HealthyHawk</string>
    <string name="label_exercise_log">Exercise Log</string>
    <string name="label_weight_log">Weight Log</string>
    <string name="BookFormTitle">Book Facilities</string>
    <string name="LabelFacility">Facility</string>
    <string name="LabelBuilding">Building</string>
    <string name="LabelDate">Date</string>
    <string name="LabelTime">Time</string>
    <string name="LabelFrom">From:</string>
    <string name="LabelTo">To:</string>
    <string name="ButtonSubmitBooking">Submit Booking Request</string>
    <string name="label_book_facilities">Book Facilities</string>
    <string name="BookingDialogSuccess">Facility Booked</string>
    <string name="action_help">Help</string>
    <string name="app_version">Version 1.0</string>
    <string name="AuthorsLabel">Developed By:</string>
    <string name="InstructionsLabel">Instructions:</string>
    <string name="Instructions">After setting up a profile, users can use HealthyHawk to track their weight over time, set goals, track recent fitness activities, and book Wilfrid Laurier Athletic facilities right from the app.</string>
    <string name="AuthorsListed">Greg Savage, Ilija Milisav, Judy Praught, Kelvin Kellner, and Taya Elezi.</string>
    <string name="label_login_screen">Login</string>
    <string name="ButtonDelete">Delete</string>
    <string name="no_exercise_log_history">No exercise history found. Press \"+\" to add some!</string>
    <string name="LabelExerciseType">Exercise Type</string>
    <string name="LabelExerciseStatNum">Quantity</string>
    <string name="LabelExerciseStatName">Unit</string>
    <string name="label_add_new_exercise">Log New Exercise Activity</string>
    <string name="no_quantity_entered">Please enter a quantity (field cannot be blank).</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_before_exit_app">Do you want to Exit?</string>
</resources>