<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login_Screen">

    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Email"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/DefaultLogin"
        android:inputType="textEmailAddress"/>


    <TextView
        android:id="@+id/PasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PasswordTitle" />


    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/PasswordTitleReEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PasswordTitleReEnter" />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPassword" />


    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegisterButton"/>





</LinearLayout>