<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".Weight_Log">

    <LinearLayout
        android:id="@+id/WeightProgressStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CurrentWeightTitleText"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textWeightLogCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/HintWeight"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/GoalWeightTitleText"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textWeightLogGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/HintWeight"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <com.jjoe64.graphview.helper.GraphViewXML
        android:id="@+id/weightProgressChart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="36dp"
        android:title="@string/WeightChartTitle"
        app:seriesData="0=231;1=229;2=229;3=228;4=227;5=227.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/logWeightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LogWeightButtonText" />

        <Button
            android:id="@+id/logGoalWeightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SetGoalButtonText" />
    </LinearLayout>

</LinearLayout>