<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Screen">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="Test message"
            android:textAlignment="center"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/bookingEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/loginMessage"
            android:hint="@string/Enter_Email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/bookingPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/bookingEmail"
            android:hint="@string/PasswordTitle"
            android:inputType="textPassword"
            android:singleLine="true" />
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/bookingPassword"
            android:hint="@string/PasswordTitleReEnter"
            android:inputType="textPassword"
            android:singleLine="true"
            android:visibility="gone"/>

    </RelativeLayout>

    <Button
        android:id="@+id/bookingRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="40dp"
        android:text="@string/RegisterButton"
        app:layout_constraintEnd_toStartOf="@+id/bookingLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/bookingLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="40dp"
        android:text="@string/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookingRegister"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/returnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/ReturnToLogin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>