<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_Screen">

<Button
        android:id="@+id/ExerciseLogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExerciseLogButton"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="153dp"
        android:layout_alignParentStart="true"
        android:layout_above="@id/WeightLogButton"/>

    <Button
        android:id="@+id/WeightLogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WeightLogButton"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_alignParentStart="true"
        android:layout_above="@id/BookFacilitiesButton"/>

    <Button
        android:id="@+id/BookFacilitiesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BookFacilitiesButton"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="319dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>