<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAppVersion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/textInstructionsLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAppName" />

        <TextView
            android:id="@+id/textInstructionsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/InstructionsLabel"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/textInstructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAppVersion" />

        <TextView
            android:id="@+id/textInstructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Instructions"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintBottom_toTopOf="@id/textAuthorsLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInstructionsLabel" />

        <TextView
            android:id="@+id/textAuthorsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/AuthorsLabel"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/textAuthorsListed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInstructions" />

        <TextView
            android:id="@+id/textAuthorsListed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/AuthorsListed"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAuthorsLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>